--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "vadim.ruban@carusto.com"
   },
   "bugs": {
-    "url": "https://github.com/datso/react-native-pjsip/issues"
+    "url": "https://github.com/rodrigowbazevedo/react-native-pjsip/issues"
   },
   "dependencies": {
     "events": "1.1.0"
@@ -26,9 +26,9 @@
     "jsdoc": "^3.5.5",
     "minami": "^1.2.3"
   },
-  "name": "react-native-pjsip",
+  "name": "react-native-pjsip-conferenciacorp",
   "description": "PJSIP module for React Native",
-  "homepage": "https://github.com/datso/react-native-pjsip",
+  "homepage": "https://github.com/rodrigowbazevedo/react-native-pjsip",
   "keywords": [
     "react-component",
     "react-native",
@@ -44,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/datso/react-native-pjsip.git"
+    "url": "git+https://github.com/rodrigowbazevedo/react-native-pjsip.git"
   },
-  "version": "2.8.0"
+  "version": "2.9.0"
 }
